--- a/css/project.css
+++ b/css/project.css
@@ -2,7 +2,7 @@
   font-family: "DM Sans", sans-serif;
 }
 
-ul, ol {
+ul, h3, p {
     margin-top: 0;
     margin-bottom: 0;
     padding-left: 0;
@@ -44,9 +44,18 @@ color: #b4afaf;
 
 .list-book {}
 
-.card-book {}
+.card-book {
+  display: block;
+  text-align: left;
+  width: auto;
 
-.book-content {}
+}
+
+.book-content {
+  margin-top: 14px;
+  margin-bottom: 8px;
+  height: auto;
+}
 
 .book-title {
 font-weight: 700;
@@ -55,6 +64,7 @@ line-height: 112%;
 letter-spacing: -0.04em;
 text-transform: uppercase;
 color: #111;
+margin-bottom: 4px;
 }
 
 .book-author {
